syntax = "proto2";

package com.hl.netty._6protobuf;

option optimize_for = SPEED;
option java_package = "com.hl.netty._6protobuf";
option java_outer_classname = "DataInfo";

//最外层载体
message MyMessage {

    enum DataType {
        StudentType = 1;
        DogType = 2;
        CatType = 3;
    }

    required DataType data_type = 1; //用来标识

    //同一时刻只能选择一个
    oneof dataBody{
        Student student = 2;
        Dog dog = 3;
        Cat cat = 4;
    }
}

message Student {
    optional string name = 1;
    optional int32 age = 2;
    optional string address = 3;
}

message Dog {
    optional string name = 1;
    optional int32 age = 2;
}

message Cat {
    optional string name = 1;
    optional int32 age = 2;
}





